Sync local branch changes